<resources>
    <string name="app_name">Book App</string>
    <string name="logo">logo</string>
    <string name="skip">Tiếp tục (Không cần đăng nhập)</string>
    <string name="login">Đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="forgotPass">Quên mật khẩu?</string>
    <string name="new_user_login">Chưa có tài khoản? <b>Đăng ký</b></string>
    <string name="SignupTv">Tạo tài khoản của bạn</string>
    <string name="loginTv">Để bắt đầu, trước tiên hãy điền thông tin tài khoản của bạn</string>
    <string name="back">back</string>
    <string name="name">Tên người dùng</string>
    <string name="register">Đăng ký</string>
    <string name="confirmpass">Xác nhận mật khẩu</string>
    <string name="logoutbtn">logoutBtn</string>
    <string name="dashboard_user">Dashboard User</string>
    <string name="subtitle_user">abc@example.com</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="addCategory">+ Thêm danh mục</string>
    <string name="CategoryTitle">Tên danh mục</string>
    <string name="Submit">Thêm</string>
    <string name="delete">delete</string>
    <string name="search">Tìm kiếm</string>
    <string name="addpdfbutton">addpdfbutton</string>
    <string name="AddNewBook">Để thêm muốn cuốn sách, bạn cần làm theo các bước sau</string>
    <string name="addatachfile">addAtachFile</string>
    <string name="bookTitle">Tiêu đề</string>
    <string name="bookDescription">Nội dung</string>
    <string name="upload">Tải lên</string>
    <string name="book">Sách</string>
    <string name="category">Danh mục</string>
    <string name="more">more</string>
    <string name="description">The description of the book</string>
    <string name="title">Tiêu đề</string>
    <string name="admin">\@admin</string>
    <string name="blank"></string>
    <string name="edit_book_icon">Sửa thông tin của sách</string>
    <string name="new_title_et">Hãy nhập tiêu đề mới</string>
    <string name="new_description_et">Sửa lại nội dung chính</string>
    <string name="update_book">Cập nhật thông tin</string>
    <string name="book_details">Chi tiết về sách</string>
    <string name="date">Ngày đăng</string>
    <string name="size">Kích thước</string>
    <string name="view">Lượt xem</string>
    <string name="downloads">Lượt tải về</string>
    <string name="pages">Số trang</string>
    <string name="n_a">N/A</string>
    <string name="pdfsv">pdfSv</string>
    <string name="readBook">Đọc sách</string>
    <string name="tablayout">tablayout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_dashboard">Trang chủ</string>
    <string name="favoritebtn">favoriteBtn</string>
    <string name="commentbtn">commentBtn</string>
    <string name="editProfile">Tùy chỉnh hồ sơ</string>
    <string name="tham_gia">Đã tham gia</string>
    <string name="follow">Đang theo dõi</string>
    <string name="update">Cập nhật</string>
    <string name="fav_books">Mục yêu thích</string>
</resources>