<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.pdf.PdfEditActivity">

    <!--toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <!--backButton-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_back_black" />
        <!--title-->
        <TextView
            android:id="@+id/iconTv"
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/backBtn"
            android:text="@string/edit_book_icon"
            android:textAlignment="center" />
        <!--subtitle-->
        <TextView
            android:id="@+id/subTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconTv"
            android:layout_toEndOf="@id/backBtn"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/admin"
            android:textColor="@color/gray"/>
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/toolbarRl"
        style="?actionBarDivider"
        android:background="@color/gray"/>

    <!--BookTitle-->
    <RelativeLayout
        android:id="@+id/titleRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarRl"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:layout_marginStart="10dp"/>
        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTv"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawableStart="@drawable/baseline_title_24"
            android:drawablePadding="10dp"
            android:hint="@string/new_title_et"
            android:inputType="textPersonName|textCapSentences"
            android:textColor="@color/black"
            android:textSize="24sp"/>
    </RelativeLayout>

    <!--description-->
    <RelativeLayout
        android:id="@+id/descriptionRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleRl"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookDescription"
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:layout_marginStart="10dp"/>
        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionTv"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/new_description_et"
            android:drawableStart="@drawable/baseline_description_24"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:inputType="textMultiLine|text"
            android:textSize="24sp"/>
    </RelativeLayout>

    <!--selectCategory-->
    <RelativeLayout
        android:id="@+id/categoryRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionRl"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/categoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/categoryTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/categoryTitle"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/ic_down_gray"
            android:drawableStart="@drawable/ic_category_gray"
            android:gravity="center_vertical"
            android:hint="@string/CategoryTitle"
            android:textSize="24sp"
            android:padding="10dp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoryRl"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/update_book"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />
</RelativeLayout>