<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.MainActivity">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button01"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/skipBtn"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skipBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button02"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
        

</RelativeLayout>