<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PdfAddActivity">
    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_back_black"
            android:contentDescription="@string/back"/>
        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconIv"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="0dp"
            android:text="@string/AddNewBook"
            android:textColor="@color/twitter"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/attachPdfBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/addatachfile"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/baseline_attach_file_24"
            app:tint="@color/twitter" />
    </RelativeLayout>

    <!--Input title-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bookTitle"
            android:drawableStart="@drawable/baseline_title_24"
            android:drawableTint="@color/twitter"
            android:drawablePadding="10dp"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/twitter"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--Input Description-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/titleTil"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/twitter"
            android:hint="@string/bookDescription"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="16sp"
            android:drawableStart="@drawable/baseline_description_24"
            android:drawableTint="@color/twitter"
            android:drawablePadding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Pick category from dialog-->
    <TextView
        android:id="@+id/categoryTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionTil"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/editTextBackground"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/CategoryTitle"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_category_gray"
        app:drawableEndCompat="@drawable/ic_down_gray"
        app:drawableTint="@color/twitter" />
    <!--divider-->
    <View
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray" />
    <!--Button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitBtn"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/upload"
        android:background="@drawable/shape_button01"
        app:backgroundTint="@color/twitter"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"/>
</RelativeLayout>