<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PdfListAdminActivity">
    <!--toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_back_black"
            android:contentDescription="@string/back"/>

        <TextView
            android:id="@+id/titleTv"
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/backBtn"
            android:text="@string/book"/>
        <TextView
            android:id="@+id/subTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTv"
            android:layout_toEndOf="@id/backBtn"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/category"
            android:textColor="@color/gray"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/searchEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarRl"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:hint="@string/search"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:minHeight="48dp" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/booksRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchEt"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_pdf_admin"/>
</RelativeLayout>