<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_back_black"
            android:contentDescription="@string/back"/>
        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_marginTop="10dp"
            android:text="@string/SignupTv"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="255dp">
        <!--Name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTil"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/twitter"
            app:boxStrokeWidth="1dp"
            app:shapeAppearanceOverlay="@style/Button4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lightgray"
                android:drawableStart="@drawable/ic_person_gray"
                android:drawablePadding="10dp"
                android:inputType="textPersonName|textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>
            <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameTil"
            app:boxStrokeColor="@color/twitter"
            app:boxStrokeWidth="1dp"
            app:shapeAppearanceOverlay="@style/Button4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lightgray"
                android:drawableStart="@drawable/ic_email_gray"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
            <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTil"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTil"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/twitter"
            app:boxStrokeWidth="1dp"
            app:shapeAppearanceOverlay="@style/Button4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pass_gray"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:textColorHint="@color/lightgray" />
        </com.google.android.material.textfield.TextInputLayout>
            <!--ConfirmPassword-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cPasswordTil"
            android:hint="@string/confirmpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordTil"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/twitter"
            app:boxStrokeWidth="1dp"
            app:shapeAppearanceOverlay="@style/Button4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cPasswordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pass_gray"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:textColorHint="@color/lightgray" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--Button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cPasswordTil"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_button01"
            android:text="@string/register"
            android:textColor="@color/white"/>
    </RelativeLayout>


</RelativeLayout>